# FastAPI_alchemy

./: .gitignore  db.sqlite3  main.py  pyproject.toml  users.py
api_v1/products/: crud.py  schemas.py  views.py
core/: config.py
core/models/: base.py  db_helper.py
users/: crud.py  schemas.py  views.py
